# VigilEye

./: .gitignore  README.md  claude  config.json  config_loader.py  core.py  dashboard.py  extract_files.py  launch_vigileye.py  pyproject.toml  refactor.py  requirements.txt  setup.sh  student_alertness.py  vision_utils.py
tests/: conftest.py  test_core.py  test_face_tracker.py  test_vision_utils.py
