[project]
name = "vigileye"
version = "0.2.0"
description = "Local-only student attentive alertness system"
requires-python = ">=3.11, <3.13"
dependencies = [
    "opencv-python==4.13.0.92",
    "mediapipe==0.10.33",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "streamlit==1.56.0",
    "streamlit-autorefresh==1.0.1",
    "pygame==2.6.1",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
